fixed href spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@ html {
 }
 
 
-
 body {font-family: 'Libre Baskerville', serif;
 background-color: #ABB8DE;
 background-image: url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23e86169' fill-opacity='0.53' fill-rule='evenodd'%3E%3Ccircle cx='3' cy='3' r='3'/%3E%3Ccircle cx='13' cy='13' r='3'/%3E%3C/g%3E%3C/svg%3E");
@@ -32,7 +31,9 @@ ul{
   padding:0;
   display:flex;
   flex-direction:row;
-  justify-content:space-between; 
+  justify-content:space-between;  width:90VW;
+  margin: 40px auto;
+  max-width:900px;
 }
 
 
